--- a/lessons/1/deployment.yaml
+++ b/lessons/1/deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: <Image>
+        image: nginx:latest
         resources:
           limits:
             memory: "128Mi"
