--- a/lessons/2/service-nodeport.yaml
+++ b/lessons/2/service-nodeport.yaml
@@ -6,7 +6,8 @@ spec:
   selector:
     app: myapp
   ports:
-  - port: 8080
-    targetPort: 80
+  - port: 80
+    targetPort: 8080
+    nodePort: 30080
   type: NodePort
 
